...
                'Tu ruta, tu viaje,\ntu pago.',
                textAlign: TextAlign.center,
                style: TextStyle(fontSize: 22, fontWeight: FontWeight.w600),
              ),
              const SizedBox(height: 50),
              BotonAmarillo(
                texto: 'Iniciar sesión',
                alPresionar: () {
                  final authBloc = context.read<AuthBloc>();
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (_) => BlocProvider.value(
...
